app name package forwarding

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Forwarding page";
+    ViewBag.Title = "Forwarding page App";
 }
 
 <div class="jumbotron">
-    <h1>Using forwarding</h1>
+    <h1>virtual forwarding</h1>
  
 </div>
 
